[ys2786] Implement two functions 1. Fetch Twitter Streaming, push all tweets to aws elastic search (ebs) 2. Provide search api for front end

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     <!-- Define servlet's URL mapping -->
     <servlet-mapping>
         <servlet-name>TwitterMap</servlet-name>
-        <url-pattern>/twittermap</url-pattern>
+        <url-pattern>/search</url-pattern>
     </servlet-mapping>
 
     <error-page>
