modify index.html 1.add navbar 2.change infowindow style

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -50,4 +50,10 @@
         <error-code>404</error-code>
         <location>/index.jsp</location>
     </error-page>
+
+    <!-- Welcome page-->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+
 </web-app>
